feat: add the deleting booth API (#145)
* feat: implement

* feat: update location
