# openapi/openapi.yaml
@@ -1216,6 +1216,61 @@ paths:
                 $ref: '#/components/schemas/ErrorResponseBody'
       tags:
         - Booth
+  '/booths/{id}':
+    delete:
+      tags:
+        - Booth
+      summary: Delete an existing booth
+      description: Delete an existing booth by Id
+      operationId: deleteBooth
+      parameters:
+        - name: id
+          description: ID to delete booth
+          in: path
+          required: true
+          schema:
+            type: string
+            pattern: '^[0-9]+$'
+      responses:
+        '204':
+          description: No Content
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseBody'
+              examples:
+                example-1:
+                  value:
+                    message: Bad Request
+                    details:
+                      - field: .params.id
+                        message: 'should match pattern "^[0-9]+$"'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseBody'
+              examples:
+                example-1:
+                  value:
+                    message: Not Found
+                    details:
+                      - field: .params.id
+                        message: 'The id not exist: "^[0-9]+$"'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseBody'
+              examples:
+                example-1:
+                  value:
+                    message: Internal server error
+                    details: []
   '/space-templates/{id}':
     get:
       security:
